added returns for models error. fixed linting

--- a/public/members.html
+++ b/public/members.html
@@ -19,12 +19,22 @@
     </div>
   </div>
 </nav>
+
   <div class="container">
+    <!-- Welcome message -->
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Welcome <span class="member-name"></span></h2>
       </div>
     </div>
+
+    <!--  -->
+    <div class="input-group input-group-sm mb-3">
+      <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroup-sizing-default">Couple</span>
+      </div>
+      <input type="text" class="form-control" id="couple" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+  </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
