--- a/public/members.html
+++ b/public/members.html
@@ -10,15 +10,16 @@
 </head>
 
 <body>
+  <!-- Nav bar -->
   <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/logout">
+          Logout
+        </a>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <div class="container">
     <!-- Welcome message -->
@@ -28,14 +29,30 @@
       </div>
     </div>
 
-    <!--  -->
-    <div class="input-group input-group-sm mb-3">
-      <div class="input-group-prepend">
-          <span class="input-group-text" id="inputGroup-sizing-default">Couple</span>
+    <div class="row">
+      <div class="col">
+        <!-- Select wedding -->
+        <label for="weddingList">Select an current wedding to work on</label>
+        <select name="weddingList" id="weddingList">
+          <option value="wedding1">wedding1</option>
+          <option value="wedding2">wedding2</option>
+          <option value="wedding3">wedding3</option>
+          <option value="wedding4">wedding4</option>
+        </select>
+        <button type="button" class="btn btn-primary" id="selectWedding">Select Wedding</button>
       </div>
-      <input type="text" class="form-control" id="couple" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+
+      <div class="col">
+        <!-- New wedding -->
+        <button type="button" class="btn btn-success" id="newWedding">Create New Wedding</button>
+      </div>
+    </div>
   </div>
-  </div>
+
+
+
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
