trying to get post to work

--- a/public/planner.html
+++ b/public/planner.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <form class="planner">
+        <div class="form-group">
+            <label for="venue">venue</label>
+            <input type="text" class="form-control" id="venueInput" placeholder="venue">
+        </div>
+    </form>
     <div class="input-group input-group-sm mb-3">
         <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-default">Couple</span>
@@ -54,6 +60,9 @@
     </div>
 
 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/planner.js"></script>
 </body>
 
 </html>
