--- a/public/planner.html
+++ b/public/planner.html
@@ -11,42 +11,46 @@
 
 <body>
     <!-- Form -->
-    <form class="planner">
-        <div class="form-group">
-            <label for="couple">Couple</label>
-            <input type="text" class="form-control" id="coupleInput" placeholder="couple">
-        </div>
-        <div class="form-group">
-            <label for="venue">Venue</label>
-            <input type="text" class="form-control" id="venueInput" placeholder="venue">
-        </div>
+<form class="planner">
+    <div class="form-group">
+        <label for="couple">Couple</label>
+        <input type="text" class="form-control" id="coupleInput" placeholder="couple">
+    </div>
+    <div class="form-group">
+        <label for="venue">Venue</label>
+        <input type="text" class="form-control" id="venueInput" placeholder="venue">
+    </div>
 
-        <div class="form-group">
-            <label for="date">Date</label>
-            <input type="text" class="form-control" id="dateInput" placeholder="date">
-        </div>
-        <div class="form-group">
-            <label for="addressStreet">Street Address</label>
-            <input type="text" class="form-control" id="addressStreetInput" placeholder="addressStreet">
-        </div>
-        <div class="form-group">
-            <label for="addressCity">City</label>
-            <input type="text" class="form-control" id="addressCityInput" placeholder="addressCity">
-        </div>
-        <!--  -->
-        <div class="form-group">
-            <label for="foodOptionOne">Food Option One</label>
-            <input type="text" class="form-control" id="foodOptionOneInput" placeholder="foodOptionOne">
-        </div>
-        <div class="form-group">
-            <label for="foodOptionTwo">Food Option Two</label>
-            <input type="text" class="form-control" id="foodOptionTwoInput" placeholder="foodOptionTwo">
-        </div>
-    </form>
-    <button type="button" class="btn btn-success" id="submit">Submit</button>
+    <div class="form-group">
+        <label for="date">Date</label>
+        <input type="text" class="form-control" id="dateInput" placeholder="date">
+    </div>
+    <div class="form-group">
+        <label for="addressStreet">Street Address</label>
+        <input type="text" class="form-control" id="addressStreetInput" placeholder="addressStreet">
+    </div>
+    <div class="form-group">
+        <label for="addressCity">City</label>
+        <input type="text" class="form-control" id="addressCityInput" placeholder="addressCity">
+        <button id="submit">Submit</button>
+    </div>
+    <!--  -->
+    <div class="form-group">
+        <label for="foodOptionOne">Food Option One</label>
+        <input type="text" class="form-control" id="foodOptionOneInput" placeholder="foodOptionOne">
+    </div>
+    <div class="form-group">
+        <label for="foodOptionTwo">Food Option Two</label>
+        <input type="text" class="form-control" id="foodOptionTwoInput" placeholder="foodOptionTwo">
+    </div>
+</form>
+<button type="button" class="btn btn-success" id="submit">Submit</button>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 <script type="text/javascript" src="js/planner.js"></script>
+<script type="text/javascript" src="/public/js/mapsPhoto.js"></script>
 </body>
 
 </html> -->
